--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -1,14 +1,86 @@
+:root {
+  --dark: #212529;
+  --light: #f8f9fa;
+  --nav-height: 70px;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html {
   position: relative;
   min-height: 100%;
 }
 
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
 body {
-  /* Margin bottom by footer height */
+  color: #212529;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   margin-bottom: 60px;
 }
-body > .container {
-  padding: 80px 15px 0;
+
+.header {
+  background-color: var(--light);
+  box-shadow: 0 0 1rem 2px rgba(0, 0, 0, 0.15);
+  position: relative;
+  width: 100%;
+  z-index: 100;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: var(--nav-height);
+  flex-direction: row;
+  margin: 0 auto;
+  max-width: 1024px;
+  padding: 0 1rem;
+  width: 100%;
+}
+
+.nav-brand {
+  color: var(--dark);
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.nav-list {
+  display: flex;
+  gap: 2rem;
+  position: relative;
+}
+
+.nav-link {
+  color: var(--dark);
+  font-size: 17px;
+  font-weight: 600;
+}
+
+.nav-button {
+  background-color: transparent;
+  border: none;
+  display: none;
+  padding: 0;
+}
+
+.container {
+  display: flex;
+  height: fit-content;
+  padding: 0 1rem;
+  margin: 0 auto;
+  max-width: 1024px;
+  width: 100%;
 }
 
 .footer {
@@ -20,7 +92,38 @@ body > .container {
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
+
+@media only screen and (max-width: 580px) {
+  .nav-list {
+    background-color: var(--light);
+    box-shadow: 0 0 1rem 2px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem 2rem;
+    position: absolute;
+    left: 5%;
+    top: -250%;
+    width: 90%;
+    transition: 300ms;
+  }
+
+  .nav-list.show {
+    top: calc(var(--nav-height) + 1rem);
+  }
+
+  .nav-link {
+    width: 100%;
+  }
+
+  .nav-button {
+    display: block;
+    line-height: 0;
+    z-index: 100;
+  }
+
+  .bxs-grid-alt {
+    font-size: 24px;
+    padding: 2px;
+  }
 }
