--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -28,6 +28,38 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+.bx {
+    font-size: 20px;
+    position: absolute;
+    transition: all 0.3s ease;
+}
+
+.bxs-user, .bxs-lock-alt {
+    color: #ccc;
+    left: 0;
+    pointer-events: none;
+}
+
+.bx-error-circle {
+    position: relative;
+}
+
+.bx-check-circle {
+    color: lightgreen;
+    opacity: 0;
+    right: 0;
+}
+
+.bx-x-circle {
+    color: red;
+    opacity: 0;
+    right: 0;
+}
+
+.bxs-grid-alt {
+    position: relative;
+}
+
 .header {
     background-color: var(--light);
     box-shadow: 0 0 1rem 2px rgba(0, 0, 0, 0.15);
@@ -132,7 +164,24 @@ body {
     align-items: center;
     margin: 1rem 0;
     position: relative;
+    transition: all 0.3s ease;
     width: 100%;
+}
+
+.form-field.invalid {
+    padding-top: 1rem;
+}
+
+.form-field.valid > .bx-check-circle {
+    opacity: 1 !important;
+}
+
+.form-field.invalid > .bx-x-circle {
+    opacity: 1 !important;
+}
+
+.form-field.invalid > .tooltip-box {
+    opacity: 1;
 }
 
 .form-input {
@@ -155,17 +204,12 @@ body {
     border-bottom: 2px solid #043248;
 }
 
-.form-input:is(:focus, :valid) ~ .form-icon {
+.form-input:is(:focus, :valid) ~ .bxs-user {
     color: #043248;
 }
 
-.form-icon {
-    color: #ccc;
-    font-size: 20px;
-    position: absolute;
-    left: 0;
-    pointer-events: none;
-    transition: all 0.3s ease;
+.form-input:is(:focus, :valid) ~ .bxs-lock-alt {
+    color: #043248;
 }
 
 .form-text {
@@ -197,6 +241,33 @@ body {
 
 .form-submit:disabled {
     opacity: 0.6;
+}
+
+.tooltip-box {
+    background-color: #FF6666;
+    border-radius: 3px;
+    opacity: 0;
+    padding: 2px 4px;
+    position: absolute;
+    top: 0;
+    transition: all 0.3s ease;
+    width: fit-content;
+}
+
+.tooltip-box::before {
+    background-color: #FF6666;
+    content: '';
+    height: 8px;
+    position: absolute;
+    left: 2rem;
+    bottom: -4px;
+    transform: rotate(45deg);
+    width: 8px;
+}
+
+.tooltip-message {
+    font-size: 12px;
+    font-weight: 500;
 }
 
 .footer {
@@ -232,6 +303,7 @@ body {
     }
 
     .nav-button {
+        position: relative;
         display: block;
         line-height: 0;
         z-index: 100;
