--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -83,7 +83,16 @@ body {
     height: fit-content;
     width: 100%;
 }
-
+.responsive-iframe{
+    width: 100%;
+    height: 500px;
+}
+.game-cont{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 3rem;
+}
 .wrapper {
     display: flex;
     align-items: center;
@@ -207,6 +216,7 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
 
 @media only screen and (max-width: 580px) {
     .nav-list {
