--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -129,7 +129,7 @@ body {
     margin-top: 3rem;
 }
 .wrapper {
-    padding: 90px 0 0;
+    padding: 90px 0 2rem;
     position: relative;
     width: 100%;
 }
@@ -222,8 +222,36 @@ body {
     box-shadow: 0 0 1rem 2px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
     padding: 2rem;
+    min-width: 380px;
+    width: fit-content;
+}
+
+.form-author {
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 4px;
+}
+
+.form-description {
+    font-size: 14px;
+    margin: 8px 0 0;
+}
+
+.form-content {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 3rem;
+}
+
+.form-inputs {
+    flex: 50%;
     max-width: 380px;
-    width: 100%;
+}
+
+.form-info {
+    flex: 50%;
+    max-width: 380px;
 }
 
 .form-title {
@@ -284,6 +312,30 @@ body {
     margin: 1rem 0;
     position: relative;
     text-align: center;
+}
+
+.form-textarea {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    resize: none;
+    scroll-behavior: smooth;
+}
+
+.form-textarea::placeholder {
+    font-size: 15px;
+}
+
+.form-textarea::-webkit-scrollbar {
+    display: none;
+}
+
+.form-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    min-height: 100vh;
+    height: fit-content;
+    width: 100%;
 }
 
 .link {
