Changed object frame for game

--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -213,10 +213,13 @@ body {
 .game-container {
     position: relative;
     width: 100%;
+    overflow: hidden;
 }
 
 .game {
     position: relative;
+    width: 100%;
+    height: 90vh;
 }
 
 .form {
