--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -2,6 +2,7 @@
     --dark: #212529;
     --light: #f8f9fa;
     --nav-height: 70px;
+    --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --min-height: calc(100vh - 70px);
 }
 
@@ -26,7 +27,7 @@ li {
 
 body {
     color: #212529;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: var(--font-family);
 }
 
 .bx {
@@ -161,18 +162,17 @@ body {
     box-shadow: 0 2px 12px 1px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
     height: fit-content;
-    min-height: 300px;
+    height: 300px;
     padding: 1rem;
     position: relative;
-    min-width: 300px;
-    width: fit-content;
+    width: 300px;
 }
 
 .box-field {
     background-color: rgba(230, 230, 230, 0.6);
     border-radius: 4px;
     padding: 8px;
-    margin: 1rem 0;
+    margin: 12px 0;
     width: 100%;
 }
 
@@ -192,15 +192,33 @@ body {
     transform: scale(1.015);
 }
 
+.box-textarea {
+    background-color: transparent;
+    border: none;
+    font-family: var(--font-family);
+    font-size: 14px;
+    height: 54px;
+    outline: none;
+    margin: 4px 0 0;
+    resize: none;
+    scroll-behavior: smooth;
+    width: 100%;
+}
+
+.box-textarea::-webkit-scrollbar {
+    display: none;
+}
+
 .games-wrapper {
     display: flex;
     align-items: center;
-    justify-content: center;
-    min-height: var(--min-height);
-    height: fit-content;
+    justify-content: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 2rem;
+    min-height: var(--min-height);
+    height: fit-content;
+    padding: 2rem 0;
     position: relative;
 }
 
@@ -320,7 +338,7 @@ body {
 }
 
 .form-textarea {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: var(--font-family);
     resize: none;
     scroll-behavior: smooth;
 }
@@ -449,7 +467,6 @@ body {
 }
 
 @media only screen and (max-width: 760px) {
-
     .form-content {
         flex-direction: column;
         gap: 8px;
@@ -458,6 +475,10 @@ body {
 
     .form-inputs {
         width: 100%;
+    }
+
+    .form-info {
+        text-align: justify;
     }
 }
 
@@ -497,7 +518,8 @@ body {
     }
 
     .games-wrapper {
-        gap: 0;
+        gap: 2rem;
+        padding: 2rem 0;
     }
 }
 
