disabled scroll for gaming

--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -222,7 +222,10 @@ body {
 .box-textarea::-webkit-scrollbar {
     display: none;
 }
-
+.disableScroll{
+    overflow-y:hidden;
+    overflow-x:hidden;
+}
 .games-wrapper {
     display: flex;
     align-items: center;
