--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -54,16 +54,18 @@ body {
     right: 0;
 }
 
+.bx-cu {
+    font-size: 36px;
+    position: relative;
+    line-height: 38px;
+}
+
 .bx-error-circle {
     position: relative;
 }
 
 .bxs-grid-alt {
     position: relative;
-}
-
-.bxn {
-    opacity: 1 !important;
 }
 
 .header {
@@ -134,16 +136,7 @@ body {
     max-width: 1024px;
     width: 100%;
 }
-.responsive-iframe{
-    width: 100%;
-    height: 500px;
-}
-.game-cont{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-top: 3rem;
-}
+
 .wrapper {
     padding: 70px 0 0;
     position: relative;
@@ -229,6 +222,43 @@ body {
     display: none;
 }
 
+.comments {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem 0 1rem;
+}
+
+.comment-card {
+    background-color: rgba(230, 230, 230, 0.4);
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 2rem;
+    padding: 1rem;
+}
+
+.comment-username {
+    line-height: 1rem;
+    margin-bottom: 4px;
+}
+
+.comment-text {
+    line-height: 16px;
+}
+
+.comment-form {
+    background-color: rgba(230, 230, 230, 0.4);
+    border-radius: 6px;
+    padding: 8px;
+    position: relative;
+}
+
+.comment-textarea {
+    height: 100%;
+}
+
 .games-wrapper {
     display: flex;
     align-items: center;
@@ -243,6 +273,7 @@ body {
 }
 
 .game-wrapper {
+    padding: 2rem 0 !important;
     position: relative;
     height: 100vh;
     width: 100%;
@@ -424,19 +455,6 @@ body {
     gap: 1rem;
 }
 
-.bxn {
-    position: relative;
-    font-size: 2rem;
-    line-height: 2rem;
-}
-
-.bxc {
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-}
-
 .notification-message {
     display: flex;
     justify-content: center;
@@ -543,7 +561,7 @@ body {
 }
 
 @media only screen and (max-width: 420px) {
-    .form-wrapper {
+    .form-wrapper, .game-wrapper {
         padding: 2rem 0;
     }
     .form {
