--- a/mvc-model/public/css/style.css
+++ b/mvc-model/public/css/style.css
@@ -4,6 +4,7 @@
     --nav-height: 70px;
     --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --min-height: calc(100vh - 70px);
+    --transition: all 0.3s ease;
 }
 
 * {
@@ -60,6 +61,11 @@ body {
     line-height: 38px;
 }
 
+.bxn {
+    position: relative;
+    font-size: 3rem;
+}
+
 .bx-error-circle {
     position: relative;
 }
@@ -96,7 +102,7 @@ body {
     font-weight: 400 !important;
     line-height: 0 !important;
     padding: 5px 10px;
-    transition: all 0.3s ease;
+    transition: var(--transition);
 }
 
 .nav-authentication:hover {
@@ -337,7 +343,7 @@ body {
     align-items: center;
     margin: 1rem 0;
     position: relative;
-    transition: all 0.3s ease;
+    transition: var(--transition);
     width: 100%;
 }
 
@@ -365,7 +371,7 @@ body {
     height: 46px;
     font-size: 1rem;
     padding: 0 2rem;
-    transition: all 0.3s ease;
+    transition: var(--transition);
     width: 100%;
 }
 
@@ -390,6 +396,7 @@ body {
 
 .form-textarea {
     font-family: var(--font-family);
+    padding-top: 12px;
     resize: none;
     scroll-behavior: smooth;
 }
@@ -436,36 +443,31 @@ body {
     opacity: 0.6;
 }
 
-.notification-box {
-    animation: slide forwards 2s;
-    background-color: white;
-    border-radius: 12px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px 18px 20px 18px;
-    position: absolute;
-    top: 5rem;
-    right: 2rem;
-    z-index: 1000;
+.notification-card {
+    animation: fadeIn 1s linear;
+    background-color: rgba(230, 230, 230, 0.3);
+    border: 1px solid var(--light);
+    border-radius: 8px;
+    padding: 1rem;
+    position: relative;
+    text-align: center;
 }
 
-.notification-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+.notification-button {
+    background-color: #657db8;
+    border: none;
+    border-radius: 3px;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 8px;
+    padding: 8px 2rem;
+    transition: var(--transition);
 }
 
-.notification-message {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 4px;
-    line-height: 1rem;
-}
-
-.notification-title {
-    color: #212529;
-    font-weight: 600;
+.notification-button:hover {
+    opacity: 0.8;
 }
 
 .tooltip-box {
@@ -475,7 +477,7 @@ body {
     padding: 2px 4px;
     position: absolute;
     top: 0;
-    transition: all 0.3s ease;
+    transition: var(--transition);
     width: fit-content;
 }
 
@@ -531,7 +533,7 @@ body {
         left: 5%;
         top: -250%;
         width: 90%;
-        transition: 300ms;
+        transition: var(--transition);
     }
 
     .nav-list.show {
@@ -567,5 +569,16 @@ body {
     .form {
         box-shadow: none;
         padding: 0 1rem;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        transform: translateY(-1rem);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
     }
 }
